[gd_scene load_steps=22 format=3 uid="uid://c3g7plcxyfift"]

[ext_resource type="Script" uid="uid://dkfjkrmloyb8q" path="res://scenes/world/buildings/building.gd" id="1_ba1of"]
[ext_resource type="Resource" uid="uid://c7yx8swh6u22w" path="res://resources/empire/buildings/trainers/mage_tower/mage_tower_1.tres" id="2_sd6ds"]
[ext_resource type="Script" uid="uid://d4hsgvbrj0rlt" path="res://scenes/world/buildings/train_component.gd" id="3_vkyne"]
[ext_resource type="Resource" uid="uid://0dc58ymxedjb" path="res://resources/empire/buildings/trainers/mage_tower/mage_tower_1_trainer.tres" id="4_fgmmn"]
[ext_resource type="Script" uid="uid://dlfqvdrv0wj33" path="res://scenes/world/units/components/SearchComponent.gd" id="5_2u72l"]
[ext_resource type="PackedScene" uid="uid://kuij88i7j4x1" path="res://scenes/world/buildings/upgrade_component.tscn" id="6_kvgdg"]
[ext_resource type="Resource" uid="uid://ftp2fog15or1" path="res://resources/empire/buildings/trainers/mage_tower/mage_tower_2.tres" id="7_v3r77"]
[ext_resource type="Resource" uid="uid://b14jb38ibos4k" path="res://resources/empire/buildings/trainers/mage_tower/mage_tower_2_trainer.tres" id="8_c18p3"]
[ext_resource type="Texture2D" uid="uid://d1fd6ltnjv8gf" path="res://assets/buildings/house 1.png" id="9_anah2"]
[ext_resource type="Texture2D" uid="uid://c555ryq6v6pc" path="res://assets/icons/building can upgrade.png" id="10_hdm0k"]
[ext_resource type="Texture2D" uid="uid://bpetq6rubw0vm" path="res://assets/resources/attackspeed.png" id="11_aw340"]
[ext_resource type="Texture2D" uid="uid://cdki4fbh54yuc" path="res://assets/buildings/exclamation_status.png" id="12_8e1ai"]
[ext_resource type="Texture2D" uid="uid://curhut5bk68hy" path="res://assets/buildings/sleep_status.png" id="13_0hals"]
[ext_resource type="Texture2D" uid="uid://4a3fd370bpyu" path="res://assets/buildings/building_cloud.png" id="14_yf8e2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_akj7n"]
size = Vector2(200, 350)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_ei8ew"]
properties/0/path = NodePath("TrainComponent:training_progress")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("Buttons/PanelContainer/TrainActivateButton:text")
properties/1/spawn = true
properties/1/replication_mode = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_lvc3b"]
atlas = ExtResource("14_yf8e2")
region = Rect2(0, 0, 1600, 1600)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ekal"]
atlas = ExtResource("14_yf8e2")
region = Rect2(1600, 0, 1600, 1600)

[sub_resource type="AtlasTexture" id="AtlasTexture_p238k"]
atlas = ExtResource("14_yf8e2")
region = Rect2(3200, 0, 1600, 1600)

[sub_resource type="AtlasTexture" id="AtlasTexture_ceol0"]
atlas = ExtResource("14_yf8e2")
region = Rect2(4800, 0, 1600, 1600)

[sub_resource type="SpriteFrames" id="SpriteFrames_yorsq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvc3b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ekal")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p238k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ceol0")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[node name="Building" type="Node2D"]
script = ExtResource("1_ba1of")
stats = ExtResource("2_sd6ds")
metadata/_custom_type_script = "uid://dkfjkrmloyb8q"

[node name="TrainComponent" type="Node" parent="." node_paths=PackedStringArray("search_component")]
script = ExtResource("3_vkyne")
stats = ExtResource("4_fgmmn")
search_component = NodePath("../SearchComponent")
metadata/_custom_type_script = "uid://d4hsgvbrj0rlt"

[node name="SearchComponent" type="Node" parent="."]
script = ExtResource("5_2u72l")
metadata/_custom_type_script = "uid://dlfqvdrv0wj33"

[node name="UpgradeComponent" parent="." instance=ExtResource("6_kvgdg")]
upgrade_cost = Dictionary[int, int]({
0: 0,
1: 2,
2: 0,
3: 2,
4: 0
})
upgraded_building = ExtResource("7_v3r77")
trainer_stats = ExtResource("8_c18p3")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("9_anah2")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 31.5)
shape = SubResource("RectangleShape2D_akj7n")

[node name="UnitTrainProgressBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = 101.0
offset_top = -11.0
offset_right = 107.0
offset_bottom = 98.0
scale = Vector2(2, 2)
max_value = 1.0
fill_mode = 3
show_percentage = false

[node name="Buttons" type="Node2D" parent="."]
visible = false

[node name="PanelContainer" type="PanelContainer" parent="Buttons"]
offset_left = 5.0
offset_top = 217.0
offset_right = 45.0
offset_bottom = 257.0
scale = Vector2(0.75, 0.75)

[node name="TrainActivateButton" type="Button" parent="Buttons/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "ON"

[node name="PanelContainer2" type="PanelContainer" parent="Buttons"]
offset_left = -35.0
offset_top = 217.0
offset_right = 5.0
offset_bottom = 257.0
scale = Vector2(0.75, 0.75)

[node name="UpgradeButton" type="Button" parent="Buttons/PanelContainer2"]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("10_hdm0k")
expand_icon = true

[node name="PanelContainer3" type="PanelContainer" parent="Buttons"]
offset_left = 70.0
offset_top = 208.0
offset_right = 110.0
offset_bottom = 248.0
scale = Vector2(0.75, 0.75)

[node name="RemoveButton" type="Button" parent="Buttons/PanelContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "X"

[node name="PanelContainer4" type="PanelContainer" parent="Buttons"]
offset_left = -100.0
offset_top = 208.0
offset_right = -60.0
offset_bottom = 248.0
scale = Vector2(0.75, 0.75)

[node name="FrontChangeButton" type="Button" parent="Buttons/PanelContainer4"]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("11_aw340")

[node name="Line2D" type="Line2D" parent="Buttons"]
z_index = 1
default_color = Color(0, 1, 0, 1)

[node name="Label" type="Label" parent="."]
offset_left = -75.0
offset_top = 16.0
offset_right = -35.0
offset_bottom = 39.0
text = "false"

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_ei8ew")

[node name="NoResources" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(8, -119)
scale = Vector2(0.25, 0.25)
texture = ExtResource("12_8e1ai")

[node name="BuildingSleeps" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(-154, -86)
scale = Vector2(0.25, 0.25)
texture = ExtResource("13_0hals")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(0.15, 0.15)
sprite_frames = SubResource("SpriteFrames_yorsq")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Buttons/PanelContainer/TrainActivateButton" to="TrainComponent" method="_on_train_activate_button_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/PanelContainer/TrainActivateButton" to="TrainComponent" method="_on_train_activate_button_mouse_exited"]
[connection signal="pressed" from="Buttons/PanelContainer/TrainActivateButton" to="TrainComponent" method="_on_train_activate_button_pressed"]
[connection signal="mouse_entered" from="Buttons/PanelContainer2/UpgradeButton" to="UpgradeComponent" method="_on_upgrade_button_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/PanelContainer2/UpgradeButton" to="UpgradeComponent" method="_on_upgrade_button_mouse_exited"]
[connection signal="pressed" from="Buttons/PanelContainer2/UpgradeButton" to="UpgradeComponent" method="_on_upgrade_button_pressed"]
[connection signal="pressed" from="Buttons/PanelContainer3/RemoveButton" to="." method="_on_remove_button_pressed"]
[connection signal="pressed" from="Buttons/PanelContainer4/FrontChangeButton" to="TrainComponent" method="_on_front_change_button_pressed"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
